move db out of image, other docker related improve

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,8 @@ services:
   quiz-server:
     build: .
     restart: unless-stopped
+    volumes:
+      - ./quiz/animedb.sqlite:/animedb.sqlite
   caddy:
     image: caddy
     restart: unless-stopped
