--- a/package.json
+++ b/package.json
@@ -12,9 +12,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/lodash-es": "^4.17.6",
-    "@types/ws": "^8.5.4",
-    "esbuild": "0.16.12",
     "escape-html": "^1.0.3",
     "fast-shuffle": "^5.0.2",
     "flat": "^5.0.2",
@@ -27,6 +24,9 @@
   },
   "devDependencies": {
     "@types/escape-html": "^1.0.2",
-    "typescript": "^4.9.4"
+    "@types/lodash-es": "^4.17.6",
+    "@types/ws": "^8.5.4",
+    "typescript": "^4.9.4",
+    "esbuild": "0.16.12"
   }
 }
