--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "test.js",
   "type": "module",
   "scripts": {
-    "build-client": "esbuild ./quiz/client/src/client.ts --bundle --outfile=./quiz/client/serve/client.js",
+    "build-client": "esbuild ./quiz/client/src/client.ts --bundle --minify --outfile=./quiz/client/serve/client.js",
     "watch-client": "esbuild ./quiz/client/src/client.ts --bundle --outfile=./quiz/client/serve/client.js --watch",
     "build-server": "esbuild ./quiz/index.ts --bundle --platform=node --format=esm --packages=external --outfile=./quiz/build/index.mjs"
   },
