--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     build: .
     restart: unless-stopped
     volumes:
-      - ./quiz/animedb.sqlite:/animedb.sqlite:ro
+      - ./animedb.sqlite:/animedb.sqlite:ro
   caddy:
     image: caddy
     restart: unless-stopped
