--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "escape-html": "^1.0.3",
     "fast-shuffle": "^5.0.2",
     "flat": "^5.0.2",
+    "glob": "^7.2.3",
     "lodash-es": "^4.17.21",
     "node-fetch": "^3.3.0",
     "seedrandom": "^3.0.5",
@@ -26,7 +27,7 @@
     "@types/escape-html": "^1.0.2",
     "@types/lodash-es": "^4.17.6",
     "@types/ws": "^8.5.4",
-    "typescript": "^4.9.4",
-    "esbuild": "0.16.12"
+    "esbuild": "0.16.12",
+    "typescript": "^4.9.4"
   }
 }
