--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "build-client": "esbuild ./quiz/client/src/client.ts --bundle --minify --outfile=./quiz/client/serve/client.js",
     "watch-client": "esbuild ./quiz/client/src/client.ts --bundle --outfile=./quiz/client/serve/client.js --watch",
+    "watch-sass": "sass --watch ./quiz/client/src/sass/index.scss ./quiz/client/serve/style.css",
     "build-server": "esbuild ./quiz/index.ts --bundle --platform=node --format=esm --packages=external --outfile=./quiz/build/index.mjs"
   },
   "author": "",
