--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "seedrandom": "^3.0.5",
     "sqlite3": "^5.1.4",
     "uuid": "^9.0.0",
+    "winston": "^3.8.2",
+    "winston-daily-rotate-file": "^4.7.1",
     "ws": "^8.11.0"
   },
   "devDependencies": {
