--- a/package.json
+++ b/package.json
@@ -8,31 +8,29 @@
     "build-client": "esbuild ./game/client/src/client.ts --bundle --minify --outfile=./game/client/serve/client.js",
     "watch-client": "esbuild ./game/client/src/client.ts --bundle --outfile=./game/client/serve/client.js --watch",
     "watch-sass": "sass --watch ./game/client/src/sass/index.scss ./game/client/serve/style.css",
-    "build-server": "esbuild ./game/index.ts --bundle --platform=node --format=esm --packages=external --outfile=./game/build/index.mjs"
+    "build-server": "esbuild ./game/index.ts --bundle --platform=node --format=esm --packages=external --outfile=./game/build/index.mjs",
+    "watch-server": "tsx watch ./game/index.ts"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/better-sqlite3": "^7.6.3",
-    "better-sqlite3": "^8.0.1",
     "escape-html": "^1.0.3",
-    "fast-shuffle": "^5.0.2",
-    "flat": "^5.0.2",
-    "glob": "^7.2.3",
+    "fast-shuffle": "^6.1.1",
+    "flat": "^6.0.1",
+    "glob": "^11.0.0",
     "lodash-es": "^4.17.21",
-    "node-fetch": "^3.3.0",
     "seedrandom": "^3.0.5",
-    "sqlite3": "^5.1.4",
-    "uuid": "^9.0.0",
-    "winston": "^3.8.2",
-    "winston-daily-rotate-file": "^4.7.1",
-    "ws": "^8.11.0"
+    "uuid": "^11.0.2",
+    "winston": "^3.16.0",
+    "winston-daily-rotate-file": "^5.0.0",
+    "ws": "^8.18.0"
   },
   "devDependencies": {
-    "@types/escape-html": "^1.0.2",
-    "@types/lodash-es": "^4.17.6",
-    "@types/ws": "^8.5.4",
-    "esbuild": "0.16.12",
-    "typescript": "^4.9.4"
+    "@types/escape-html": "^1.0.4",
+    "@types/lodash-es": "^4.17.12",
+    "@types/ws": "^8.5.13",
+    "esbuild": "0.24.0",
+    "tsx": "^4.19.2",
+    "typescript": "^5.6.3"
   }
 }
